Fix animation issue on Safari for volume slider.

--- a/src/sass/gui.scss
+++ b/src/sass/gui.scss
@@ -58,7 +58,6 @@
 	-webkit-user-select:none;
 	@include transition(all .2s ease-in);
 	@include transform(translateY(0));
-	@include transform(translate3d(0,0,0));
 }
 
 .mtvn-controls-hidden {
@@ -287,7 +286,6 @@
 .mtvn-controls-volume-slider-container {
 	background: rgba(33, 33, 33, 0.8);
 	padding-top: 5px;
-	position:relative;
   	@include transition(all .2s ease-in);
   	@include transform(translateY(65px));
 }
